--- a/doc/livre-blanc-afup/config.yml
+++ b/doc/livre-blanc-afup/config.yml
@@ -15,7 +15,7 @@ book:
         - { element: cover }
         - { element: acknoledgement } # -> Gauthier Delamarre (liste des contributeurs)
         - { element: toc   }
-        - { element: preface } # -> GDE : je suggère Xavier Lacot en tant que président de l'asso
+        - { element: preface } # -> Xavier Lacot
         - { element: chapter, number: I, content: 000-introduction.md } # -> Gauthier Delamarre
         - { element: chapter, number: II, content: 01-php-en-entreprise.md }
         - { element: chapter, number: II-1, content: 01-php-entreprise/01-php-en-chiffre.md }
@@ -26,7 +26,7 @@ book:
         - { element: chapter, number: III-3, content: 02-etat-de-lart/intro_bonnes_pratiques.md } # -> Gauthier Delamarre
         - { element: chapter, number: III-4, content: 02-etat-de-lart/intro_cms.md }
         - { element: chapter, number: IV, content: 03-framework.md }
-        - { element: chapter, number: IV-1, content: 03-framework/01-comment_choisir.md }
+        - { element: chapter, number: IV-1, content: 03-framework/01-comment_choisir.md } # -> Xavier Lacot
         - { element: chapter, number: IV-2, content: 03-framework/02-mise_en_oeuvre.md } # -> Gauthier Delamarre
         - { element: chapter, number: V, content: 04-cms.md }
         - { element: chapter, number: V-1, content: 04-cms/01-quand_utiliser_cms.md }
