Correction du numéro de version du livre blanc et de la casse de l'abbréviation "AFUP"

--- a/doc/livre-blanc-afup/config.yml
+++ b/doc/livre-blanc-afup/config.yml
@@ -1,7 +1,7 @@
 book:
-    title:            "Livre blanc Afup - PHP en entreprise"
-    author:           "Afup"
-    edition:          "Deuxième édition"
+    title:            "Livre blanc AFUP - PHP en entreprise"
+    author:           "AFUP"
+    edition:          "Cinquième édition"
     language:         fr
     publication_date: ~
 
